Configurable offline time, after which nodes are automatically deleted

--- a/app/views/directives/nodeSaved.html
+++ b/app/views/directives/nodeSaved.html
@@ -13,8 +13,8 @@
 
 <p>
     <strong>Hinweis:</strong>
-    Sollte Dein Knoten länger als drei Monate offline sein, so wird dieser nach einer gewissen Zeit
-    automatisch gelöscht. Du kannst Deinen Knoten selbstverständlich jederzeit neu anmelden.
+    Sollte Dein Knoten länger als {{ config.monitoring.prunePeriodString }} offline sein, so wird dieser nach einer gewissen Zeit
+    automatisch gelöscht. Du kannst Deinen Knoten selbstverständlich jederzeit neu anmelden, dazu notiere Dir jetzt den VPN-Schlüssel, die MAC-Adresse und die Koordinaten.
 </p>
 
 <p>
